made field previews sensitive to which field is clicked on in order to focus on that field when revealing the edit panel; added cancel button to path editing and fixed alignment problems there

--- a/application/css/v2.scss
+++ b/application/css/v2.scss
@@ -48,6 +48,9 @@
 	padding-left: $container-padding;
 	padding-right: $container-padding;
 }
+.button.cancel {
+  @include button-color(#6b6b6b);
+}
 
 body, h1, h2, h3, h4, h5, h6, dd, dt, ul, ol, li {
 	margin: 0;
@@ -236,12 +239,16 @@ img.missing {
 			line-height: 12px;
 			text-transform: none;
 		}
-		.path {
+		& > .path {
 			position: absolute;
 			bottom: 10px;
 		}
 		.path .edit {
+      @include display-box;
+      @include box-orient(horizontal);
+      @include box-align(center);
 			.input-error {
+        display: block;
 				position: relative;
 				top: 0;
 				vertical-align: top;
@@ -273,15 +280,18 @@ img.missing {
 				color: $error;
 			}
 			.button {
-				padding-left: 20px;
-				padding-right: 20px;
+        display: block;
 				margin-left: 8px;
-				height: 24px;
-				vertical-align: top;
+        padding-left: 32px;
+        padding-right: 32px;
+			}
+			.button.cancel {
+				padding-left: 10px;
+				padding-right: 10px;
 			}
 			span, a.path {
+        display: block;
 				position: relative;
-				top: 4px;
 			}
 			a.path {
 				color: #c1c1c1;
